--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -3,11 +3,6 @@
     <head>
         <meta charset="utf-8">
         <title>Test</title>
-<!--        <link rel="stylesheet" href="/styles/resets.css">
-        <link rel="stylesheet" href="/styles/base.css">
-        <link rel="stylesheet" href="/styles/header.css">
-        <link rel="stylesheet" href="/styles/form.css">
-        <link rel="stylesheet" href="/styles/footer.css"> -->
     </head>
 
     <body>
@@ -25,9 +20,8 @@
             <section>
                 <form class="" onsubmit="return handleSubmit(event)">
                     <input id="name" type="text" name="input" value=""  placeholder="Name">
-                    <!-- <input id="name" type="text" name="input" value="" onblur="onBlur()" placeholder="Name"> -->
-                    <!-- <label for="url">Enter an https:// URL:</label>
-                    <input type="url" name="url" id="url" placeholder="https://example.com" pattern="https://.*" size="40" required> -->
+                    <label for="url">Enter an https:// URL:</label>
+                    <input type="url" name="url" id="url" placeholder="https://example.com" pattern="https://.*" size="40" required>
                     <input type="submit" name="" value="submit" onclick="return Client.handleSubmit(event)" onsubmit="return Client.handleSubmit(event)">
                 </form>
             <section>
